--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
 <!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>My HTML adventure</h1>
+    <p>
+    This is a sample paragraph containing some inline elements:
+    <strong>This text is strong</strong>,
+    <em>This text is emphasized</em>,
+    and an <a href="https://developer.mozilla.org/en-US/docs/Web/HTML"></a>
+        </p>
+         <table>
+            <th>NAME</th>
+            <th>TEL</th>
+            <th>LOCATION</th>
+
+         </table>
+        
+    
+</body>
+</html>
